fix overflow

--- a/src/styles/details.scss
+++ b/src/styles/details.scss
@@ -94,8 +94,21 @@
   height: 25vw;
   display: block;
   min-height: 130px;
+  overflow: hidden;
 
   @include hover(transform, scale(1.05));
+
+  @media (min-width: 1440px) {
+    @include hover(transform, scale(1.02));
+  }
+
+  @media (min-width: 2000px) {
+    @include hover(transform, scale(1.01));
+  }
+
+  @media (min-width: 4000px) {
+    @include hover(transform, scale(1.01));
+  }
 }
 
 .first-photo {
